@@ -6,10 +6,12 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
+// --module-path /Users/arturmeshalkin/Downloads/javafx-sdk-21.0.7/lib --add-modules javafx.controls,javafx.fxml
 public class GUI extends Application {
     private Stage primaryStage;
 
     public static void main(String[] args) {
+
         Application.launch(args);
     }
 
@@ -23,7 +25,7 @@ public class GUI extends Application {
 
         ViewModel controller = loader.getController();
 
-        Automat automat = new Automat(3);
+        Automat automat = new Automat(10);
         controller.setAutomat(automat);
 
         Scene scene = new Scene(root);
